log
Thu 16 May 2024 08:05:01 PM UTC: 
 tests:  0|5
total_score: 0/70
f842709
Thu 16 May 2024 08:14:29 PM UTC: 
 sudoku.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
74233f5
Thu 16 May 2024 08:15:41 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3da1dc1
Thu 16 May 2024 08:44:24 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
23cde51
Thu 16 May 2024 08:44:36 PM UTC: 
 sudoku.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  2|4
total_score: 15/70
6b04430
Thu 16 May 2024 08:55:39 PM UTC: 
 sudoku.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
24dd090
Thu 16 May 2024 08:56:48 PM UTC: 
 sudoku.c | 38 --------------------------------------
 1 file changed, 38 deletions(-)
 tests:  2|4
total_score: 15/70
2543d31
Thu 16 May 2024 09:13:21 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6a7dd79
Thu 16 May 2024 09:35:31 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|3
total_score: 35/70
ad1c028
Thu 16 May 2024 09:43:23 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  5|3
total_score: 35/70
90ebcc4
Thu 16 May 2024 09:45:55 PM UTC: 
 sudoku.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  5|3
total_score: 35/70
edac469
Sat 18 May 2024 08:52:57 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 35/70
3096ad6
Sat 18 May 2024 08:53:09 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
141ca9d
Sat 18 May 2024 08:59:59 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
e46db41
Sat 18 May 2024 09:00:27 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:131:16: error: void value not ignored as it ought to be
  131 |       Node* n= pop(S);
      |                ^~~
Compilation failed
3210949
Sat 18 May 2024 10:24:24 PM UTC: 
 sudoku.c | 23 ++++++++++-------------
 1 file changed, 10 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:128:16: error: void value not ignored as it ought to be
  128 |       Node* n= pop(S);
      |                ^~~
Compilation failed
042f5c3
Sat 18 May 2024 10:36:58 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4eea115
Sat 18 May 2024 10:59:11 PM UTC: 
 sudoku.c | 17 -----------------
 1 file changed, 17 deletions(-)
 tests:  6|2
total_score: 45/70
bcc57fd
Sat 18 May 2024 10:59:30 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
b6c5b6a
Sat 18 May 2024 11:00:36 PM UTC: 
 sudoku.c | 26 ++++++++------------------
 1 file changed, 8 insertions(+), 18 deletions(-)
 tests:  0|0
cdf63c5
Sat 18 May 2024 11:01:43 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
6f5fdd7
Sat 18 May 2024 11:03:11 PM UTC: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2fdb373
Sat 18 May 2024 11:03:28 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
378ce98
Sat 18 May 2024 11:05:57 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:139:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  139 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
670e093
Sat 18 May 2024 11:07:04 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
26139bb
Sat 18 May 2024 11:07:36 PM UTC: 
 sudoku.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
 tests:  10|0
total_score: 70/70
fa0c39f
Sat 18 May 2024 11:07:51 PM UTC: 
 sudoku.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  0|0
14f0e7f
Sat 18 May 2024 11:08:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d904002
Sat 18 May 2024 11:09:41 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
041573e
